--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -95,7 +95,7 @@
                                         <th>Fecha </th>
                                         <th>Hora</th>
                                         {% comment %} <th>Hora de Atencion</th> {% endcomment %}
-                                        {% comment %} <th>Tratamiento Solicitado</th> {% endcomment %}
+                                         <th>Tratamiento Solicitado</th> 
                                         <th>Profesional</th>
                                         <th> Estado </th>
                                         <th colspan="3"> Acciones </th> 
@@ -117,7 +117,7 @@
                                             <td >{{c.fecha}}</td>
                                             {% comment %} <td >{{c.hora}} hs.</td> {% endcomment %}
                                             <td >{{c.hora_atencion}} hs.</td>
-                                            {% comment %} <td >{{c.tratamiento_solicitado}}</td> {% endcomment %}
+                                             <td >{{c.tratamiento_solicitado}}</td> 
                                             <td >{{c.profesional}}</td>
                                             {%if c.estado%}
                                              <td>Confirmado</td>
@@ -127,13 +127,13 @@
                                                     {{busqueda}}
                                             {{busqueda}}
                                             <!--OPCIONES Modificar y Eliminar-->
-                                                <td>
+                                                {% comment %} <td>
                                                     {%if perms.gestion_agendamiento.change_cita%}
                                                     <a href="/tratamiento/listar_tratamientos_agendados/45" class="btn btn-info">
                                                         <i class="bi bi-clipboard2-check" style="font-size:15px"> Tto. Asignado</i>
                                                     </a>
                                                     {%endif%}
-                                              </td>
+                                              </td> {% endcomment %}
                                               <td>
                                                     {%if perms.gestion_agendamiento.change_cita%}
                                                     <a href="/agendamiento/modificar_cita/{{c.id_cita}}" class="btn btn-primary">
