agregue los permisos a cada rol

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/fecha_pasada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/fecha_pasada.html
@@ -24,7 +24,7 @@
                         &nbsp;
                         <a onclick="history.back()" class="btn btn-danger">
                            <i class="bi bi-backspace"></i>
-                           Atras <br>
+                           Atrás <br>
                         </a>
 
     </center>
