--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -13,7 +13,7 @@
 
 {%block content%}
 
-{%if perms.gestion_insumo.view_insumo%}  
+{%if perms.gestion_inventario_insumos.add_insumo%}
     <div class="container">
         <div class="card">
             <div class="card-body">
