--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
@@ -71,30 +71,12 @@
                                    
                                     <center>
                                         
-                                     <div class="alert alert-success alert-info  col-md-4 offset-md-0 "  style ="font-size:17px;"  role="alert">
+                                     <div class="alert alert-success alert-danger  col-md-4 offset-md-0 "  style ="font-size:17px;"  role="alert">
                                          El tratamiento no tiene insumos asignados 
                                     </div>
                                         
                                     </center>
                                 {%endif%}
-
-
-                                <!-- {% if messages %}
-                                <ul class="messages">
-                                
-                                    {% for message in messages %}
-                                    <li>
-                                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
-                                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-                                        <B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
-                                        Insumo
-                                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
-                                        {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
-                                        {{ message }}
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                                {% endif %} -->
                         </tbody>
                     </table>
                     <div class="d-flex justify-content-center">
