--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -99,7 +99,7 @@
                                     </td>
                                     {%endif%}
                                     <td>
-                                    {%if perms.gestion_inventario_insumo.view_insumo%}  
+                                   {%if perms.gestion_tratamiento.change_tratamiento%}  
                                         <a href="/insumo/listar_insumos_asignados/{{c.codigo_tratamiento}}" class="btn btn-info">
                                             <i class="bi-pencil-square"></i>
                                             Insumos
