--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
@@ -26,6 +26,7 @@
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
+								<th>Nro</th>
 								<th>RUC</th>
 								<th>Nombre</th>
 								<th>Dirección</th>
@@ -39,6 +40,7 @@
 							{% if object_list %}
 							{% for proveedor in object_list %}
 							<tr>
+								<td>{{ forloop.counter}}</td>
 								<td>{{ proveedor.ruc }}</td>
 								<td>{{ proveedor.nombre }}</td>
 								<td>{{ proveedor.direccion }}</td>
