--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/ver_historial_clinico.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/ver_historial_clinico.html
@@ -1,43 +1,45 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-	<div class="container">
-		<div class="card">
-			<div class="card-body">
-				{% if historial %}
-					<center>
-						<h2>
-							<i class="bi bi-file-earmark-medical-fill"></i>
-							Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
-							</i>
-						</h2> 
-					</center>
-					<br>
-					<br>
-					<table class="table table-striped table-hover">
-						<thead style="border: 1cm;">
-							<tr>
-								<th>Número</th>
-								<th>Tratamiento realizado</th>
-								<th>Fecha de realización</th>
-							</tr>	
-						</thead>
-						<tbody>
-								{% for h in historial %}
-									<tr>
-										<td >{{forloop.counter}}</td>
-										<td>{{ h.tratamiento.nombre_tratamiento }}</td>
-										<td>{{ h.fecha_realizacion }}</td>
-									</tr>
-								{% endfor %}
-						</tbody>
-					</table> 
-				{% else %}
-					<center>
-						<h3>¡Usted,no cuenta con historial clínico!</h3>
-					</center>
-				{% endif %}
+	{%if perms.gestion_historial_clinico.view_historialclinico%}
+		<div class="container">
+			<div class="card">
+				<div class="card-body">
+					{% if historial %}
+						<center>
+							<h2>
+								<i class="bi bi-file-earmark-medical-fill"></i>
+								Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+								</i>
+							</h2> 
+						</center>
+						<br>
+						<br>
+						<table class="table table-striped table-hover">
+							<thead style="border: 1cm;">
+								<tr>
+									<th>Número</th>
+									<th>Tratamiento realizado</th>
+									<th>Fecha de realización</th>
+								</tr>	
+							</thead>
+							<tbody>
+									{% for h in historial %}
+										<tr>
+											<td >{{forloop.counter}}</td>
+											<td>{{ h.tratamiento.nombre_tratamiento }}</td>
+											<td>{{ h.fecha_realizacion }}</td>
+										</tr>
+									{% endfor %}
+							</tbody>
+						</table> 
+					{% else %}
+						<center>
+							<h3>¡Usted,no cuenta con historial clínico!</h3>
+						</center>
+					{% endif %}
+				</div>
 			</div>
 		</div>
-	</div>
+	{%endif%}
 {% endblock%}
