--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/listar_paciente2.html
@@ -1,62 +1,70 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-	<div class="container">
-		<div class="card">
-			<div class="card-body">
-				<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>
-				<br>
-				<br>
-				<br>
-				<table class="table table-striped table-hover">
-					<thead style="border: 1cm;">
-						<tr>
-							<th>Número</th>
-							<th>N° de Documento</th>
-							<th>Nombre y apellido</th>
-							<th>Acciones</th>
-						</tr>
-					</thead>
-					<tbody>
-						{% if object_list %}
-							{% for paciente in object_list %}
-								<tr>
-									<td >{{forloop.counter}}</td>
-									<td>{{ paciente.numero_documento }}</td>
-									<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
-									<td>
-										<a class="btn btn-primary" href="/tratamiento/asignar_tratamientos/{{ paciente.id_paciente }}">
-											<i class="bi-pencil-square"></i>
-											Asignar Tratamientos
-										</a>
-										<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.id_paciente}}">
-											<i class="bi-eye-fill"></i>
-											Tratamientos asignados
-										</a>
-									</td>
-								</tr>
-							{% endfor %}
-						{% else %}
-							<h1>No hay registros de pacientes</h1>
-						{% endif %}
+	{%if perms.gestion_historial_clinico.view_historialclinico%}
+		<div class="container">
+			<div class="card">
+				<div class="card-body">
+					<center>  <h2>	 <i class="bi-person-lines-fill">Listado de Pacientes</i></h2> </center>
+					<br>
+					<br>
+					<br>
+					<table class="table table-striped table-hover">
+						<thead style="border: 1cm;">
+							<tr>
+								<th>Número</th>
+								<th>N° de Documento</th>
+								<th>Nombre y apellido</th>
+								<th>Acciones</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% if object_list %}
+								{% for paciente in object_list %}
+									<tr>
+										<td >{{forloop.counter}}</td>
+										<td>{{ paciente.numero_documento }}</td>
+										<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
+										<td>
 
-						{% if messages %}
-							<ul class="messages">
-								{% for message in messages %}
-									<li>
-										{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
-										{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-											<B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
-										{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
-										{% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
-											{{ message }}
-									</li>
+											{%if perms.gestion_historial_clinico.add_historialclinico%}
+											<a class="btn btn-primary" href="/tratamiento/asignar_tratamientos/{{ paciente.id_paciente }}">
+												<i class="bi-pencil-square"></i>
+												Asignar Tratamientos
+											</a>
+											{%endif%}
+
+											{%if perms.gestion_historial_clinico.view_historialclinico%}
+											<a class="btn btn-info" href="/tratamiento/listar_tratamientos_asignados/{{paciente.id_paciente}}">
+												<i class="bi-eye-fill"></i>
+												Tratamientos asignados
+											</a>
+											{%endif%}
+										</td>
+									</tr>
 								{% endfor %}
-								</ul>
-						{% endif %}
-					</tbody>
-				</table> 
+							{% else %}
+								<h1>No hay registros de pacientes</h1>
+							{% endif %}
+
+							{% if messages %}
+								<ul class="messages">
+									{% for message in messages %}
+										<li>
+											{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error:
+											{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+												<B><FONT COLOR="BLUE">¡La operación fue exitosa!: </FONT>
+											{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}Advertencia:
+											{% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}Aviso: {% endif %}
+												{{ message }}
+										</li>
+									{% endfor %}
+									</ul>
+							{% endif %}
+						</tbody>
+					</table> 
+				</div>
 			</div>
 		</div>
-	</div>
+	{% endif %}
 {% endblock%}
