columnas en insumos
ajustes de columnas faltan aún

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -58,6 +58,8 @@
                                 <th>Costo Unitario</th>  
                                 <th>Fecha de Caducidad</th> 
                                 <th>Cantidad Insumo</th>
+                                <th>Unidad por Paquete, Caja o Litro</th>
+                                <th>Cantidad Unitaria</th>
                                 <th>Unidad</th> 
                                 <!-- <th>Estado</th>  -->
                                 <th colspan="2"><center>Acciones</center>  </th>
