--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -56,6 +56,18 @@
                             <br>
                             <div class="form-group">
                                 <p>
+                                    <label for="{{form.unidad_x_paquete.name}}">{{form.unidad_x_paquete.label}}</label></p>
+                                    {{form.unidad_x_paquete}} </p>
+                                </div>
+                            <br>
+                            <div class="form-group">
+                                <p>
+                                    <label for="{{form.cantidad_unitaria.name}}">{{form.cantidad_unitaria.label}}</label></p>
+                                    {{form.cantidad_unitaria}} </p>
+                                </div>
+                            <br>
+                            <div class="form-group">
+                                <p>
                                     <label for="{{form.unidad.name}}">{{form.unidad.label}}</label></p>
                                     {{form.unidad}} </p>
                                 </div>
