modificacion de agendamiento y creacion de modelo

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_reservado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_reservado.html
@@ -23,7 +23,7 @@
 
                           <a onclick="history.back()" class="btn btn-success">
                            <i class="bi bi-backspace"></i>
-                           Atras <br>
+                           Atrás <br>
                         </a>
                           
                      
