--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
@@ -41,7 +41,7 @@
                         <br>
                         <div class="form-group">
                             <label for="tratamiento_simple"> Motivo de Consulta</label>
-                                {{form.tratamiento_solicitado}} <br>
+                                {{form.tratamiento_simple}} <br>
                         </div>
                         <br>
                         <div class="form-group">
