Implementacion de Confirmacion de cita y registro de Cobro pendiente

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -58,7 +58,7 @@
                         <br>
                       
                          <div class="form-group">
-                            <label for="{{form.estado.name}}"><b>{{form.estado.label}}</b></label>
+                            <label for="{{form.estado.name}}"><b>{{form.estado.label}}: </b></label>
                                 {{form.estado}}
                         </div> 
                        
