--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
@@ -17,7 +17,7 @@
                         <br>
                         <center>
                             <h3>
-                                <b>Insumos para el Tratamiento de</b> <b style="color:blue; font-size:25px;" ><td>{{ tratamiento.nombre_tratamiento }}</b><!--  {{tratamiento.codigo_tratamiento.precio}}--> </td></i>
+                                <b>Insumos para el tratamiento de: </b> <b style="color:blue; font-size:25px;" ><td>{{ tratamiento.nombre_tratamiento }}</b><!--  {{tratamiento.codigo_tratamiento.precio}}--> </td></i>
                             </h3>
                         </center>
                         
