--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -24,7 +24,12 @@
                 {%if perms.gestion_tratamiento.add_tratamiento%}  
                     <table  align="right" >
                             <tr>
-                            <td> <a href="/tratamiento/agregar_tratamiento/" class="btn btn-success">+ Agregar un tratamiento </a> </td>
+                            <td>
+                                 <a href="/tratamiento/agregar_tratamiento/" class="btn btn-success">
+                                    <i class="bi bi-plus-circle"></i>
+                                    Agregar un tratamiento 
+                                </a> 
+                            </td>
                             </tr>
                     </table>
                 {%endif%}
