--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -66,7 +66,7 @@
                                     <center>
                                         <h5>
                                             <i class="bi bi-exclamation-triangle-fill"></i>
-                                            <i>El paciente no tiene tratamientos asignados</i> 
+                                            <i>El paciente no tiene tratamientos a cobrar</i> 
                                             <i class="bi bi-exclamation-triangle-fill"></i>
                                             <br>
                                             <br>
