--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
@@ -4,10 +4,16 @@
     {%if perms.gestion_tratamiento.add_tratamiento%}
 
        <div class="container">
-            <div class=" col-md-10 offset-md-1" >
+            <div class=" col-12 col-md-6 offset-md-3" >
                     <div class="card">
                         <br>
-                        <center>  <h2>Agregar Tratamiento</h2> </center>      
+                        <center>
+                            <h2>
+                                Agregar Tratamiento
+                            </h2>
+                            <br>
+                            <small> <b>¡Ingrese los datos del tratamiento!</b></small>
+                        </center>
                             <!-- <form method="POST" id="group_form" novalidate=""> -->
                     
                             <form action="" method="post">
@@ -18,11 +24,39 @@
                                             ✅ Tratamiento agregado correctamente
                                         </div>
                                     {%endif%}
-                                    {{form.as_p}} 
+                                    <table>
+                                        <div class="form-group">
+                                            <br><label for="{{form.nombre_tratamiento.name}}">{{form.nombre_tratamiento.label}}</label></br>
+                                            {{form.nombre_tratamiento}}
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <br><label for="{{form.descripcion_tratamiento.name}}">{{form.descripcion_tratamiento.label}}</label></br>
+                                            {{form.descripcion_tratamiento}}
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <br><label for="{{form.precio.name}}">{{form.precio.label}}</label></br>
+                                            {{form.precio}}
+                                        </div>
+                                        <br>
+                                        <div class="form-group">
+                                            <br><label for="{{form2.tipo_categoria.name}}">{{form2.tipo_categoria.label}}</label></br>
+                                            {{form2.tipo_categoria}}
+                                        </div>
+                                    </table>
+                                    <!-- {{form.as_p}} -->
+                                    <!-- {{form2.as_p}} -->
                                     <br>
                                 <div class="d-flex justify-content-center">
-                                    <button class="btn btn-primary" type="submit" style="margin: 10px;">Guardar</button>
-                                    <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                                    <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                                        <i class="bi bi-save"></i>
+                                        Guardar
+                                    </button>
+                                    <a href="/tratamiento/listar_tratamiento/" class="btn btn-danger" style="margin: 10px;">
+                                        <i class="bi bi-x-circle"></i>
+                                        Cancelar
+                                    </a>
                                 </div>
                                 <hr>
                             
@@ -38,9 +72,13 @@
         
     {%endif%}                          
                 <table  align="center" >
-                    <tr>
-                    <td> <a href="/tratamiento/listar_tratamiento/" class="btn btn-info">Ver listado de tratamientos </a> </td>
-                    </tr>
+                    <br>
+                    <div class="d-grid gap-2 col-6 mx-auto"> 
+                        <a href="/tratamiento/listar_tratamiento/" class="btn btn-outline-success">
+                            <i class="bi bi-view-list"></i>
+                            Ver listado de tratamientos 
+                        </a> 
+                    </div>
                 </table>
    </div>
 {%endblock%}
