--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
@@ -8,7 +8,7 @@
   {%if perms.gestion_tratamiento.change_tratamiento%} 
 <div class="row">
    
-  <div class=" col-md-10 offset-md-1" >
+  <div class=" col-12 col-md-6 offset-md-3" >
         <div class="card">
             <br>
             <center>  <h2> Modificar Tratamiento</h2> </center>
@@ -22,13 +22,13 @@
                     {%endif%}
 
                         {{form.as_p}}
-                   
+                        {{form2.as_p}}
 
                         <br>
                         <div class="d-flex justify-content-center">  
                             <button class="btn btn-primary" type="submit" style="margin: 10px;">
                                 <i class="bi-save"></i>
-                               Modificar y Guardar
+                                Guardar
                             </button>
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
                             &nbsp;
@@ -42,10 +42,9 @@
                 </form>
                 <hr>
                
-                <div >
+                <div class="d-grid gap-2">
                     <a class="btn btn-outline-info" type="button" href="/insumo/asignar_insumos/{{tratamiento.codigo_tratamiento}}" >
-
-                       <b style ="font-size:19px;"> Insumos</b>
+                       <b style ="font-size:19px;"> Insumos del tratamiento</b>
                     </a>
                 </div>
            <div>
@@ -62,9 +61,12 @@
 {%endif%}
                     <hr>
                         
-                        <table  align="right" >
-                            <tr>
-                            <td> <a href="/tratamiento/listar_tratamiento/" class="btn btn-info">Ver listado de tratamientos </a> </td>
-                            </tr>
+                        <table >
+                            <div align="right" > 
+                                <a href="/tratamiento/listar_tratamiento/" class="btn btn-info">
+                                    <i class="bi bi-view-list"></i>
+                                    Ver listado de tratamientos 
+                                </a> 
+                            </div>
                         </table>
 {%endblock%}
